fix resize, add align setting

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -707,6 +707,15 @@ table {
   margin-left: auto;
 }
 
+th.align-right {
+  .table-column-title {
+    margin-left: auto;
+  }
+  .table-column-sortIcon {
+    margin-left: 0;
+  }
+}
+
 .table > tbody > tr > td {
   padding: 11px 10px 7px;
   border: none;
